# zeroclaw-solana-plugins

./: .gitignore  README.md  SUBMISSION.md
demo/: README.md  VIDEO_SCRIPT.md  web-demo.py
docs/: ONE_PAGER.md
plugins/sns-resolve/: Cargo.toml  README.md  manifest.toml
plugins/sns-resolve/src/: lib.rs  sns.rs
plugins/sns-resolve/tests/: sns.rs
plugins/solana-pay-request/: Cargo.toml  README.md  manifest.toml
plugins/solana-pay-request/src/: lib.rs  pay.rs
plugins/solana-pay-request/tests/: pay.rs
plugins/token-risk-check/: Cargo.toml  README.md  manifest.toml
plugins/token-risk-check/src/: lib.rs  risk.rs  rpc.rs
plugins/token-risk-check/tests/: risk.rs
plugins/unsigned-transfer/: Cargo.toml  README.md  manifest.toml
plugins/unsigned-transfer/src/: lib.rs  tx.rs
plugins/unsigned-transfer/tests/: tx.rs
wit/: UPSTREAM_REF  VERSIONING.md
wit/v0/: README.md  channel.wit  sockets.wit  ws-client.wit
