[package]
name = "solana-pay-request"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "ZeroClaw tool plugin: build a Solana Pay transfer-request URL for a SOL/SPL payment. Zero-custody — holds no key, makes no network call."
publish = false

# cdylib for the wasm component; rlib so the pure URL-builder core is testable
# on the host with a plain `cargo test`.
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wit-bindgen = "0.46"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bs58 = "0.5"

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1

# Standalone crate: built for wasm32-wasip2, not part of the host workspace.
[workspace]
